More of the plan decided during meeting

--- a/minimax.tex
+++ b/minimax.tex
@@ -452,13 +452,13 @@ Note that when asking first only questions to the chair, if the obtained knowled
 2. Limited pessimistic performs well.
 	Reach regret: $n/10$. For this, we need $m^x n$ questions. TODO Olivier: find $x$. TODO Beatrice: check and compile results in a table specifically for this (see: function regret by k).
 	Almost as good as Pess and better than the Elitist one (see previous graphs or table)
-	Much faster [do this later]
+	Much faster [do this much later]
 3. Decrease in MMR is linear with nb of questions
-	include nice graph of Beatrice.
+	Redo nice graph of Beatrice with same sizes.
 4. Value of information qC VS qV with 2 phases and 2phases VS interleaving
-	A question to the chair has a similar value (in regret) as a qV.
-	Interleaving $k$ questions is similar to asking $p$ questions to the chair first and then $k - p$ to the voters when $p$ is chosen optimally. 
-5. Limited pessimistic approx Limited optimistic
+	Interleaving $k$ questions is similar to asking $p$ questions to the chair first and then $k - p$ to the voters when $p$ is chosen optimally. [do this a bit later]
+	A question to the chair has a similar value (in regret) as a qV: use the graph summarized by Olivier. Check prop. qC. Check on other sizes.
+5. Limited pessimistic approx Limited optimistic [do this much later]
 
 \sisetup{round-mode=places, round-precision=2, table-figures-integer=2, table-figures-decimal=2}
 \begin{table}
