Started chng Limited

--- a/minimax.tex
+++ b/minimax.tex
@@ -427,7 +427,7 @@ This badness measure gives a way of picking questions among a set of possible qu
 However, to avoid the absorption property of max, we adopt the $\leximax$ criterion as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest value.
 We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it estimates an upper bound to the possible quality of a myopic strategy.
 
-The \strat{Limited pessimistic} strategy uses the same criterion as the pessimistic strategy, but limiting it to a small set of $n+1$ candidate questions: one per agent, and one to the chair. Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. The \strat{Limited pessimistic} strategy first selects $n$ candidates questions to the agents using the heuristic proposed by \citet{Lu2011}. Considering agent $j$, either $x^{*} \ppref_j \bar{y}$, or $\bar{y} \ppref_j x^{*}$, or $x^{*}$ and $\bar{y}$ are incomparable in $\ppref_j$. As shown in the proof of Claim \ref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, an adversary should place as many alternatives as he can above $x^{*}$ in the first case, and between $\bar{y}$ and $x^{*}$ in the second. An intuitive way to reduce the pairwise max regret would be, therefore, to ask questions involving such alternatives \commentOC{(with equal likelyhood?)}\commentBN{We are not asking questions yet. We select as a candidate question the one corresponding to the situation. If you mean "what if there are several alternatives that can be placed between the two?" then yes, we pick one equiprobably.}, hoping for an answer that would prevent the adversary to play his best game. If $x^{*}$ and $\bar{y}$ are incomparable, then the candidate question to agent $j$ simply consists in comparing the two alternatives.
+The \strat{Limited pessimistic} strategy uses the same criterion as the pessimistic strategy, but limiting it to a small set of $n + m$ candidate questions: one per agent, and one per rank. Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. The \strat{Limited pessimistic} strategy first selects $n$ candidates questions to the agents using the heuristic proposed by \citet{Lu2011}. Considering agent $j$, either $x^{*} \ppref_j \bar{y}$, or $\bar{y} \ppref_j x^{*}$, or $x^{*}$ and $\bar{y}$ are incomparable in $\ppref_j$. As shown in the proof of Claim \ref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, an adversary should place as many alternatives as he can above $x^{*}$ in the first case, and between $\bar{y}$ and $x^{*}$ in the second. An intuitive way to reduce the pairwise max regret would be, therefore, to ask questions involving such alternatives \commentOC{(with equal likelyhood?)}\commentBN{We are not asking questions yet. We select as a candidate question the one corresponding to the situation. If you mean "what if there are several alternatives that can be placed between the two?" then yes, we pick one equiprobably.}, hoping for an answer that would prevent the adversary to play his best game. If $x^{*}$ and $\bar{y}$ are incomparable, then the candidate question to agent $j$ simply consists in comparing the two alternatives.
 To define the candidate question to the chair, consider
 %\begin{align}
 $\w^\tau = \argmin_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)$,
