--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,15 @@
+@inproceedings{Benabbou2016,
+  author    = {Nawal Benabbou and
+               Serena Di Sabatino Di Diodoro and
+               Patrice Perny and
+               Paolo Viappiani},
+  title     = {Incremental Preference Elicitation in Multi-attribute Domains for
+               Choice and Ranking with the Borda Count},
+  booktitle = {Scalable Uncertainty Management - 10th International Conference, {SUM}
+               2016, Nice, France, September 21-23, 2016, Proceedings},
+  pages     = {81--95},
+  year      = {2016}
+}
 
 @Article{Boutilier2006,
   title = "Constraint-based optimization and utility elicitation using the minimax decision criterion",
