--- a/minimax.tex
+++ b/minimax.tex
@@ -496,50 +496,45 @@ We next investigate the better performing Limited pessimistic strategy, because 
 \sisetup{round-mode=places, round-precision=2, table-figures-integer=2, table-figures-decimal=2}
 \begin{table}
 	\begin{center}
-		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+		\resizebox{\columnwidth}{!}{
+		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{k} & {Rnd} & {sd} & {Pes.} & {sd} & {L.\ pes.} & {sd} \\
+			{k} & {Rd.\tiny{$\pi=0.1$}} & {sd} & {Pes.} & {sd} & {L.\ pes.} & {sd} & {Eli.} & {sd} \\
 			\midrule
-			0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0\\
-			20 & 9.05 & 0.51 & 7.38 & 0.65 & 6.08 & 0.76\\
-			40 & 7.3 & 0.62 & 4.21 & 1.18 & 2.77 & 1.27\\
-			60 & 6.01 & 0.81 & 1.56 &0.98 & 1.23 & 1.22\\
-			80 & 4.72 & 1.07 & 0.2 & 0.33 & 0.55 & 0.71\\
-			100 & 3.0 & 0.97 & 0.0 &  0.0 & 0.2 & 0.28\\
-			120 & 1.31 & 1.15 & 0.0 & 0.0 & 0.1 & 0.21\\
-			140 & 0.44 & 0.85 & 0.0 & 0.0 & 0.1 & 0.21\\
-			150 & 0.21 & 0.58 & 0.0 & 0.0 & 0.1 & 0.21\\
+			0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0\\
+			20 & 8.07 & 0.52 & 6.17 & 0.78 & 5.85 & 0.87& 6.32 & 0.61\\
+			40 & 5.26 & 0.88 & 2.98 & 0.99 & 2.57 & 1.05 & 3.37 & 0.83\\
+			60 & 2.37 & 0.93 & 0.77 &0.78 & 0.67 & 0.67 & 2.33 & 1.05\\
+			80 & 0.33 & 0.49 & 0.05 & 0.18 & 0.03 & 0.12 & 2.28 & 1.05\\
+			100 & 0.0 & 0.02 & 0.0 &  0.0 & 0.0 & 0.0& 2.28 & 1.05\\
 			\bottomrule
 		\end{tabular}
+		}
 	\end{center}
-	\caption{Average minimax regret in problems of size $(5, 10)$ after $k$ questions over $25$ runs.}
-	\label{fig:55}
+	\caption{Average minimax regret in problems of size $(5, 10)$ after $k$ questions and $200$ runs.}
+	\label{tab:comparison}
 \end{table}
 
-\begin{table}
-	\begin{center}
-		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
-			\toprule
-			{k} & {Rnd} & {sd} & {L.\ pes.} & {sd??} \\
-			\midrule
-			0 & 20.0 & 0.0 & 20.0 & 0.0 \\
-			50 & 19.81 & 0.12 & 17.19 & 1.2 \\
-			100 & 19.22 & 0.25 & 14.72 & 2.4 \\
-			150 & 18.18 & 0.54 & 12.52 & 3.89 \\
-			200 & 17.05  & 0.29 & 10.57 & 5.14 \\
-			250 & 15.95 & 0.26 & 9.28 & 6.17 \\
-			\bottomrule
-		\end{tabular}
-	\end{center}
-	\caption{Average regret in problems of size $(10, 20)$ after $k$ questions over $5$ runs.}
-	\label{fig:1020}
-\end{table}
+\begin{figure}
+	\centering
+	\includegraphics[width=.45\textwidth]{comparison.png}
+	\caption{Plot in support of \cref{tab:comparison}}
+	\label{fig:comparison}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=.45\textwidth]{linearity.png}
+	\caption{Average regret after $k$ questions with Limited Pessimistic strategy after 10 runs for different problem sizes.}
+	\label{fig:linearity}
+\end{figure}
+
 
 We test our strategies using randomly generated datasets. 
 Our first goal is to see, with a small problem size ($m = 5, n = 5$) and the (time consuming) Pessimistic strategy, if an important lowering of the maximal regret can be achieved with a reasonable number of questions. We also want to estimate how “hard” such a problem is, by using the Random strategy as a baseline. Third, we want to estimate the loss (in terms of worst regret) when switching to the faster Limited pessimistic strategy. Fourth, we want to see, on a bigger problem size ($m = 10, n = 20$), how many questions must be asked for that strategy to achieve a significant reduction of the worst regret. Finally, we want to evaluate, thanks to the Two phases strategy, the impact of varying the proportion of questions asked to the agents (with respect to questions asked to the chair) on the reduction of the worst regret.
 %We also want to see how realistic our approach is for various problem sizes, by estimating the number of questions we would have to ask before being able to reduce the worst regret significantly.
 
-The results are displayed in \cref{fig:55,fig:1020,fig:p}, where strategies are designated by Rnd for Random, Pes. for Pessimistic, L.\ pes. for Limited pessimistic and 2 ph. for Two phases. 
+The results are displayed in \cref{tab:comparison,fig:1020,fig:p}, where strategies are designated by Rnd for Random, Pes. for Pessimistic, L.\ pes. for Limited pessimistic and 2 ph. for Two phases. 
 
 We observe that the Pessimistic strategy is able to reduce the regret almost completely after $30$ questions. We also see that Limited pessimistic performs almost as well as Pessimistic; this is good news since (for $m=5$ and $n=5$), the former strategy is much faster and takes only $2.6s$ for a complete elicitation session, while the latter takes $16s$.
 %However, it takes $1000$ times more time than the \strat{Random} strategy ($16s$ of the Pessimistic compared to $0.014s$ of the Random). Moreover, the results of the \strat{Limited pessimistic}, that takes almost $80\%$ less of the time of the \strat{Pessimistic} ($2.6s$), are essentially the same.
@@ -552,17 +547,21 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 			\toprule
 			{p} & {Comm. Fst.} & {sd} & {Vot. Fst.} & {sd} \\
 			\midrule
-			0 & 5.02 & 0.82 & 3.21 & 1.6 \\
-			25 & 5.83 & 1.25 & 6.79 & 1.2 \\
-			50 & 6.47 & 1.14 & 5.2 & 1.58 \\
-			100 & 9.4 & 1.58 & 8.66 & 0.51 \\
-			150 & 11.89 & 1.1 & 12.31 & 0.96 \\
-			200 & 15.64  & 0.52 & 16.12 & 1.06 \\
-			250 & 20.0 & 0.0 & 20.0 & 0.0 \\
+			0 &  &  &  &  \\
+			50 &  &  &  &  \\
+			100 &  &  &  &  \\
+			150 &  &  & &  \\
+			200 &   &  &  &  \\
+			250 &  & &  &  \\
+			300 &&&& \\
+			350 &&&& \\
+			400 &&&& \\
+			450 &&&& \\
+			500 &&&& \\
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Average regret in problems of size $(10, 20)$ after $250$ questions over $5$ runs. Where $p$ represents the number of questions asked to the chair.}
+	\caption{Average regret in problems of size $(10, 20)$ after $500$ questions and $10$ runs. Where $p$ represents the number of questions asked to the chair.}
 	\label{fig:p}
 \end{table}
 
