adjusted tables and figures

--- a/minimax.tex
+++ b/minimax.tex
@@ -498,19 +498,19 @@ We next investigate the better performing Limited pessimistic strategy, because 
 		\resizebox{\columnwidth}{!}{
 		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{k} & {Rnd.} & {sd} & {Pes.} & {sd} & {L.\ pes.} & {sd} & {Eli.} & {sd} \\
+			{k} & {Rnd.} & {sd} & {Pes.} & {sd} & {Ex.\ pes.} & {sd} & {Eli.} & {sd} \\
 			\midrule
 			0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0\\
-			20 & 9.06 & 0.49 & 6.17 & 0.78 & 5.85 & 0.87& 6.32 & 0.61\\
-			40 & 7.35 & 0.82 & 2.98 & 0.99 & 2.57 & 1.05 & 3.37 & 0.83\\
-			60 & 5.74 & 1.03 & 0.77 &0.78 & 0.67 & 0.67 & 2.33 & 1.05\\
-			80 & 4.10 & 1.15 & 0.05 & 0.18 & 0.03 & 0.12 & 2.28 & 1.05\\
+			20 & 9.06 & 0.49 & 5.85 & 0.87 & 6.17 & 0.78 & 6.32 & 0.61\\
+			40 & 7.35 & 0.82 & 2.57 & 1.05 & 2.98 & 0.99 & 3.37 & 0.83\\
+			60 & 5.74 & 1.03 & 0.67 & 0.67 & 0.77 &0.78 & 2.33 & 1.05\\
+			80 & 4.10 & 1.15 & 0.03 & 0.12 & 0.05 & 0.18 & 2.28 & 1.05\\
 			100 & 2.63 & 1.19 & 0.0 &  0.0 & 0.0 & 0.0& 2.28 & 1.05\\
 			\bottomrule
 		\end{tabular}
 		}
 	\end{center}
-	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions and $200$ runs.}
+	\caption{Average $\MMR$ in problems of size $(5, 10)$ after $k$ questions and $200$ runs.\commentBN{Attention, I already corrected the table with the new names. The column Pes. here is the Limited Pessimistic, I inverted them to follow the presentation order.}}
 	\label{tab:comparison}
 \end{table}
 
@@ -524,7 +524,7 @@ We next investigate the better performing Limited pessimistic strategy, because 
 \begin{figure}
 	\centering
 	\includegraphics[width=.45\textwidth]{linearity.png}
-	\caption{Average MMR after $k$ questions with Limited Pessimistic strategy after 10 runs for different problem sizes.}
+	\caption{Average $\MMR$ after $k$ questions with Pessimistic strategy after 10 runs for different problem sizes.}
 	\label{fig:linearity}
 \end{figure}
 
@@ -532,7 +532,7 @@ We next investigate the better performing Limited pessimistic strategy, because 
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=1, table-number-alignment = center, table-figures-decimal=0]S[table-figures-integer=1, table-number-alignment = center, table-figures-decimal=0]S[table-number-alignment = center]S[table-figures-integer=1, table-number-alignment = center, table-figures-decimal=0]S[table-figures-integer=1, table-number-alignment = center, table-figures-decimal=0]}
 			\toprule
-			{m} & {n} & {$\frac{n}{10}$} & {$k_{MMR}$} & {$m\cdot n +m^?$} \\
+			{m} & {n} & {$\frac{n}{10}$} & {$k_{\MMR}$} & {$m\cdot n +m^?$} \\
 			\midrule
 			5 & 10 & 1.0 & 60 &  \\
 			5 & 15 & 1.5 & 80 &  \\
@@ -543,7 +543,7 @@ We next investigate the better performing Limited pessimistic strategy, because 
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{}
+	\caption{Number of questions needed by Pessimistic strategy to reach $\MMR=\frac{n}{10}$ (represented by $k_{\MMR}$), for different problem sizes.}
 	\label{tab:linearity}
 \end{table}
 
@@ -557,29 +557,51 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 %However, it takes $1000$ times more time than the \strat{Random} strategy ($16s$ of the Pessimistic compared to $0.014s$ of the Random). Moreover, the results of the \strat{Limited pessimistic}, that takes almost $80\%$ less of the time of the \strat{Pessimistic} ($2.6s$), are essentially the same.
 %In Table \ref{fig:1020}, we can see the drop of regret using a bigger instance.
 %Finally in Table \ref{fig:p}
+%
+%\begin{table}
+%	\begin{center}
+%		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+%			\toprule
+%			{p} & {Comm. Fst.} & {sd} & {Vot. Fst.} & {sd} \\
+%			\midrule
+%			0 & 0.48 &0.59 & 0.48 &0.59  \\
+%			50 & 0.01 & 0.04& 0.0 & 0.0 \\
+%			100 & 0.04 & 0.09 & 0.13 & 0.35 \\
+%			150 & 0.68 & 0.65 & 0.66 & 0.77 \\
+%			200 &   &  &  &  \\
+%			250 & 3.2 & 1.67 & 4.07	& 1.51 \\
+%			300 &&&& \\
+%			350 &&&& \\
+%			400 &&&& \\
+%			450 &&&& \\
+%			500 &&&& \\
+%			\bottomrule
+%		\end{tabular}
+%	\end{center}
+%	\caption{Average regret in problems of size $(10, 20)$ after $500$ questions and $10$ runs. Where $p$ represents the number of questions asked to the chair.}
+%	\label{tab:twoP500}
+%\end{table}
 
 \begin{table}
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{p} & {Comm. Fst.} & {sd} & {Vot. Fst.} & {sd} \\
+			{p} & {Com. Fst.} & {sd} & {Vot. Fst.} & {sd} \\
 			\midrule
-			0 &  &  &  &  \\
-			50 &  &  &  &  \\
-			100 &  &  &  &  \\
-			150 &  &  & &  \\
+			0 & 0.66 & 0.67 & 0.65 & 0.65  \\
+			50 & 1.23 & 1.46 & 0.8 & 0.79 \\
+			100 & 2.03 & 1.56 &  &  \\
+			150 & 3.41 & 1.79 & 4.07 & 1.51 \\
 			200 &   &  &  &  \\
-			250 &  & &  &  \\
+			250 & 8.4 & 1.86 & 	& \\
 			300 &&&& \\
 			350 &&&& \\
 			400 &&&& \\
-			450 &&&& \\
-			500 &&&& \\
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Average regret in problems of size $(10, 20)$ after $500$ questions and $10$ runs. Where $p$ represents the number of questions asked to the chair.}
-	\label{tab:twoP}
+	\caption{Average $\MMR$ in problems of size $(10, 20)$ after $400$ questions and $10$ runs. Where $p$ represents the number of questions asked to the chair. (The $\MMR$ after 400 questions with Pessimistic is $0.62$ ± $0.56$)}
+	\label{tab:twoP400}
 \end{table}
 
 \section{Conclusions}  
